feat: enable ProxySupport also for external IDPs within jumper